# hh_employers_database

./: README.md  main.py  pyproject.toml
hh_employers_database/: classes.py  config.py  dbmanager.py  hh_api.py  queries.sql  utils.py
